java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField10.pass
package org.netbeans.test.java.hints;

import java.util.Map;

public class CreateField10 {
    private Map[] a;
    
    public void test() {
        Map[] b = null;
        a = b;
    }
}
